@@ -1,6 +1,12 @@
 2007-07-13  Edward Hervey  <bilboed@bilboed.com>
 
 	Patch by: Thijs Vermeir <thijsvermeir@gmail.com>
+	* pitivi/objectfactory.py:
+	Use decodebin2 if available for temporary file sources.
+
+2007-07-13  Edward Hervey  <bilboed@bilboed.com>
+
+	Patch by: Thijs Vermeir <thijsvermeir@gmail.com>
 	* pitivi/ui/mainwindow.py:
 	Fix issues with rendering progress bar.
 
